# Semetemono

./: LICENSE  README.md  Semetemono.cabal
app/: Main.hs
src/: Lib.hs
