name:                Semetemono
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/TheFreakLord/Semetemono#readme
license:             MIT
license-file:        LICENSE
author:              Paul Kosel
maintainer:          paul@niobium.me
copyright:           2016 Paul Kosel
category:            Misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, parsec
  default-language:    Haskell2010

executable Semetemono-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Semetemono
                     , parsec
  default-language:    Haskell2010

test-suite Semetemono-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Semetemono
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TheFreakLord/Semetemono
